[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/nectar.png" type="Texture" id=1]
[ext_resource path="res://src/Nectar.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/nectar-slurp.ogg" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 5.0
height = 8.0

[node name="Nectar" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
frame = 1
speed_scale = 0.75
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 5 )

[node name="ReplenishTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="NectarSlurp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 3.139
pitch_scale = 2.46
[connection signal="area_entered" from="." to="." method="_on_Nectar_area_entered"]
[connection signal="timeout" from="ReplenishTimer" to="." method="_on_ReplenishTimer_timeout"]
